--- a/src/app/appel/liste-presence/liste-presence.component.html
+++ b/src/app/appel/liste-presence/liste-presence.component.html
@@ -10,7 +10,7 @@
                             <img src="assets\\images\\loginsST.png"
                                 style="width: 35px;float: left; margin-right: 10px;">
                             <div style="float: left;">
-                                <h4 class="card-title">Présence</h4>
+                                <h4 class="card-title">Vérification Présence</h4>
                                 <p class="card-category">STADE TUNISIEN</p>
                             </div>
                         </div>
