--- a/src/app/borne/borne.component.html
+++ b/src/app/borne/borne.component.html
@@ -137,8 +137,8 @@
                             {{caisse.montantCaisse}} TND</p>
 
                         <ng-template pTemplate="footer">
-                            <!-- <p-button icon="pi pi-check" routerLink="/historique-caisse/{{ borneSelected.id }}"
-                                label="Historique" styleClass="p-button-text"></p-button> -->
+                            <p-button icon="pi pi-arrow-right" routerLink="/historique-caisse/{{ borneSelected.id }}"
+                                label="Historique" styleClass="p-button-text"></p-button>
                             <p-button icon="pi pi-times" (click)="displayBasicCaisse=false" label="Fermer"
                                 styleClass="p-button-text"></p-button>
                         </ng-template>
