--- a/src/app/article/consulter-article/consulter-article.component.html
+++ b/src/app/article/consulter-article/consulter-article.component.html
@@ -15,27 +15,26 @@
         <div class="card-body">
           <div class="row">
             <div class="col-md-4">
-              <br>
-              <div class="row">
-                <div class="col-md-12">
-                  <button [disabled]="!consultationStock" class="btn btn-warning" type="button"
-                    routerLink="/approvisionnement-article/{{ article.id }}">Approvisonnement</button>
-                </div>
+              <div class="col-md-12 text-center">
+                <h2 class="product-title">{{ article.libelle }}</h2>
               </div>
               <br>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="tab-pane active" id="pic-1">
-                    <img [src]="urlphotoArticle" width="100%" />
-                  </div>
-                </div>
+              <div class="col-md-12">
+                <img [src]="urlphotoArticle" width="100%" />
               </div>
             </div>
+
             <div class="col-md-1">
             </div>
             <div class="col-md-6">
-              <br>
-              <h2 class="product-title">{{ article.libelle }}</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <button [disabled]=" !consultationStock" class="btn btn-warning" type="button"
+                    routerLink="/approvisionnement-article/{{ article.id }}">Approvisonnement</button>
+                  <button [disabled]=" !consultationStock" class="btn btn-default" type="button"
+                    routerLink="/historique-approvisionnement/{{ article.id }}">Historique Approvisonnement</button>
+                </div>
+              </div>
               <br>
               <div class="row">
                 <div class="col-md-6">
